--- a/football_scores/app/src/main/res/values/strings.xml
+++ b/football_scores/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="test_text">Test</string>
+    <string name="empty_crest">No Team Crest</string>
     <string name="today">Today</string>
     <string name="yesterday">Yesterday</string>
     <string name="tomorrow">Tomorrow</string>
